--- a/style.css
+++ b/style.css
@@ -1,14 +1,11 @@
-body {
-	padding: 13px;
-
-	max-width: 38em;
-	margin: auto;
-
-	color: #404040;
-	background-color: #e8e8e8;
-}
-
-h4 {
-    margin-top:4em;
+main, body, html {
+  height: 100%;
+  margin: auto;
+  max-width: 60em;
+  padding-left: 2em;
+  padding-right: 2em;
+  font-family: Georgia, "Times New Roman", serif;
+  color: #484848;
+  background-color: #e8e8e8;
 }
 
